@@ -27,8 +27,6 @@ import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
 import com.echothree.util.server.control.BaseSimpleCommand;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import javax.enterprise.context.Dependent;
 
@@ -39,14 +37,14 @@ public class CreateAssociateCommand
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
             new FieldDefinition("AssociateProgramName", FieldType.ENTITY_NAME, true, null, null),
             new FieldDefinition("AssociateName", FieldType.ENTITY_NAME, true, null, null),
             new FieldDefinition("PartyName", FieldType.ENTITY_NAME, true, null, null),
             new FieldDefinition("Description", FieldType.STRING, true, 1L, 132L),
             new FieldDefinition("SummaryMimeTypeName", FieldType.MIME_TYPE, true, null, null),
             new FieldDefinition("Summary", FieldType.STRING, true, null, null)
-        ));
+        );
     }
     
     /** Creates a new instance of CreateAssociateCommand */
