@@ -30,8 +30,6 @@ import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
 import com.echothree.util.server.control.BaseSimpleCommand;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import javax.enterprise.context.Dependent;
 
@@ -42,13 +40,13 @@ public class CreateClubItemCommand
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
             new FieldDefinition("ClubName", FieldType.ENTITY_NAME, true, null, null),
             new FieldDefinition("ClubItemTypeName", FieldType.ENTITY_NAME, true, null, null),
             new FieldDefinition("ItemName", FieldType.ENTITY_NAME, true, null, null),
             new FieldDefinition("UnitOfMeasureTypeName", FieldType.ENTITY_NAME, false, null, null),
             new FieldDefinition("SubscriptionTime", FieldType.UNSIGNED_LONG, false, null, null)
-        ));
+        );
     }
     
     /** Creates a new instance of CreateClubItemCommand */
