@@ -33,10 +33,9 @@ import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import javax.enterprise.context.Dependent;
+import javax.inject.Inject;
 
 @Dependent
 public class GetEntityInstanceCommand
@@ -46,12 +45,12 @@ public class GetEntityInstanceCommand
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.EntityInstance.name(), SecurityRoles.Review.name())
-                )))
-        )));
+                ))
+        ));
 
         FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("EntityRef", FieldType.ENTITY_REF, false, null, null),
@@ -64,11 +63,15 @@ public class GetEntityInstanceCommand
         super(COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
 
+    @Inject
+    EntityInstanceControl entityInstanceControl;
+
+    @Inject
+    EntityInstanceLogic entityInstanceLogic;
+
     @Override
     protected EntityInstance getEntity() {
-        var entityInstance = EntityInstanceLogic.getInstance().getEntityInstance(this, form);
-
-        return entityInstance;
+        return entityInstanceLogic.getEntityInstance(this, form);
     }
 
     @Override
@@ -76,10 +79,10 @@ public class GetEntityInstanceCommand
         var result = CoreResultFactory.getGetEntityInstanceResult();
 
         if(entityInstance != null) {
-            var entityInstanceControl = Session.getModelController(EntityInstanceControl.class);
+            var entityInstanceTransfer = entityInstanceControl.getEntityInstanceTransfer(getUserVisit(), entityInstance,
+                    false, false, false, false);
 
-            result.setEntityInstance(entityInstanceControl.getEntityInstanceTransfer(getUserVisit(), entityInstance,
-                    false, false, false, false));
+            result.setEntityInstance(entityInstanceTransfer);
         }
 
         return result;
