@@ -23,43 +23,43 @@ import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.data.geo.server.entity.GeoCode;
-import com.echothree.model.data.user.common.pk.UserVisitPK;
+import com.echothree.model.data.geo.server.entity.GeoCodeScope;
+import com.echothree.model.data.geo.server.factory.GeoCodeFactory;
+import com.echothree.model.data.item.server.factory.ItemFactory;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.message.ExecutionErrors;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
-import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import javax.enterprise.context.Dependent;
+import javax.inject.Inject;
 
 @Dependent
 public class GetCitiesCommand
-        extends BaseMultipleEntitiesCommand<GeoCode, GetCitiesForm> {
+        extends BasePaginatedMultipleEntitiesCommand<GeoCode, GetCitiesForm> {
     
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
                 new PartyTypeDefinition(PartyTypes.CUSTOMER.name(), null),
                 new PartyTypeDefinition(PartyTypes.VENDOR.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.City.name(), SecurityRoles.List.name())
-                        )))
-                )));
+                        ))
+                ));
 
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("CountryName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("StateName", FieldType.ENTITY_NAME, true, null, null)
-                ));
+                );
     }
     
     /** Creates a new instance of GetCitiesCommand */
@@ -67,14 +67,16 @@ public class GetCitiesCommand
         super(COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
 
+    @Inject
+    GeoControl geoControl;
+
     GeoCode stateGeoCode;
+    GeoCodeScope citiesGeoCodeScope;
 
     @Override
-    protected Collection<GeoCode> getEntities() {
-        var geoControl = Session.getModelController(GeoControl.class);
+    protected void handleForm() {
         var countryName = form.getCountryName();
         var countryGeoCode = geoControl.getCountryByAlias(countryName);
-        Collection<GeoCode> cityGeoCodes = null;
 
         if(countryGeoCode != null) {
             var stateName = form.getStateName();
@@ -82,15 +84,23 @@ public class GetCitiesCommand
             stateGeoCode = geoControl.getStateByAlias(countryGeoCode, stateName);
 
             if(stateGeoCode != null) {
-                cityGeoCodes = geoControl.getCitiesByState(stateGeoCode);
+                citiesGeoCodeScope = geoControl.getCitiesGeoCodeScope(stateGeoCode);
             } else {
                 addExecutionError(ExecutionErrors.UnknownStateName.name(), stateName);
             }
         } else {
             addExecutionError(ExecutionErrors.UnknownCountryName.name(), countryName);
         }
+    }
 
-        return cityGeoCodes;
+    @Override
+    protected Long getTotalEntities() {
+        return citiesGeoCodeScope == null ? null : geoControl.countGeoCodesByGeoCodeScope(citiesGeoCodeScope);
+    }
+
+    @Override
+    protected Collection<GeoCode> getEntities() {
+        return citiesGeoCodeScope == null ? null : geoControl.getCitiesByState(citiesGeoCodeScope);
     }
 
     @Override
@@ -98,10 +108,14 @@ public class GetCitiesCommand
         var result = GeoResultFactory.getGetCitiesResult();
 
         if(entities != null) {
-            var geoControl = Session.getModelController(GeoControl.class);
             var userVisit = getUserVisit();
 
             result.setState(geoControl.getStateTransfer(userVisit, stateGeoCode));
+
+            if(session.hasLimit(GeoCodeFactory.class)) {
+                result.setCityCount(getTotalEntities());
+            }
+
             result.setCities(geoControl.getCityTransfers(getUserVisit(), entities));
         }
 
