@@ -27,8 +27,6 @@ import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
 import com.echothree.util.server.control.BaseSimpleCommand;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import javax.enterprise.context.Dependent;
 
@@ -39,7 +37,7 @@ public class CreateItemKitMemberCommand
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("ItemName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("InventoryConditionName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("UnitOfMeasureTypeName", FieldType.PERCENT, true, null, null),
@@ -47,7 +45,7 @@ public class CreateItemKitMemberCommand
                 new FieldDefinition("MemberInventoryConditionName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("MemberUnitOfMeasureTypeName", FieldType.PERCENT, true, null, null),
                 new FieldDefinition("Quantity", FieldType.UNSIGNED_LONG, false, null, null)
-                ));
+                );
     }
     
     /** Creates a new instance of CreateItemKitMemberCommand */
