@@ -23,69 +23,75 @@ import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.control.workflow.server.control.WorkflowControl;
 import com.echothree.model.control.workflow.server.logic.WorkflowDestinationLogic;
-import com.echothree.model.data.user.common.pk.UserVisitPK;
 import com.echothree.model.data.workflow.server.entity.WorkflowDestination;
 import com.echothree.model.data.workflow.server.entity.WorkflowDestinationSelector;
+import com.echothree.model.data.workflow.server.factory.WorkflowDestinationSelectorFactory;
+import com.echothree.model.data.workflow.server.factory.WorkflowStepFactory;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
-import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import javax.enterprise.context.Dependent;
+import javax.inject.Inject;
 
 @Dependent
 public class GetWorkflowDestinationSelectorsCommand
-        extends BaseMultipleEntitiesCommand<WorkflowDestinationSelector, GetWorkflowDestinationSelectorsForm> {
+        extends BasePaginatedMultipleEntitiesCommand<WorkflowDestinationSelector, GetWorkflowDestinationSelectorsForm> {
     
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.WorkflowDestination.name(), SecurityRoles.Selector.name())
-                        )))
-                )));
+                        ))
+                ));
 
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("WorkflowName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("WorkflowStepName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("WorkflowDestinationName", FieldType.ENTITY_NAME, true, null, null)
-                ));
+                );
     }
     
     /** Creates a new instance of GetWorkflowDestinationSelectorsCommand */
     public GetWorkflowDestinationSelectorsCommand() {
         super(COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
+
+    @Inject
+    WorkflowControl workflowControl;
+
+    @Inject
+    WorkflowDestinationLogic workflowDestinationLogic;
     
     WorkflowDestination workflowDestination;
 
     @Override
-    protected Collection<WorkflowDestinationSelector> getEntities() {
+    protected void handleForm() {
         var workflowName = form.getWorkflowName();
         var workflowStepName = form.getWorkflowStepName();
         var workflowDestinationName = form.getWorkflowDestinationName();
-        Collection<WorkflowDestinationSelector> workflowDestinationSelectors = null;
 
-        workflowDestination = WorkflowDestinationLogic.getInstance().getWorkflowDestinationByName(this, workflowName,
+        workflowDestination = workflowDestinationLogic.getWorkflowDestinationByName(this, workflowName,
                 workflowStepName, workflowDestinationName);
+    }
 
-        if(!hasExecutionErrors()) {
-            var workflowControl = Session.getModelController(WorkflowControl.class);
+    @Override
+    protected Long getTotalEntities() {
+        return workflowDestination == null ? null : workflowControl.countWorkflowDestinationSelectorsByWorkflowDestination(workflowDestination);
+    }
 
-            workflowDestinationSelectors = workflowControl.getWorkflowDestinationSelectorsByWorkflowDestination(workflowDestination);
-        }
-
-        return workflowDestinationSelectors;
+    @Override
+    protected Collection<WorkflowDestinationSelector> getEntities() {
+        return workflowDestination == null ? null : workflowControl.getWorkflowDestinationSelectorsByWorkflowDestination(workflowDestination);
     }
 
     @Override
@@ -93,10 +99,14 @@ public class GetWorkflowDestinationSelectorsCommand
         var result = WorkflowResultFactory.getGetWorkflowDestinationSelectorsResult();
 
         if(entities != null) {
-            var workflowControl = Session.getModelController(WorkflowControl.class);
             var userVisit = getUserVisit();
 
             result.setWorkflowDestination(workflowControl.getWorkflowDestinationTransfer(userVisit, workflowDestination));
+
+            if(session.hasLimit(WorkflowDestinationSelectorFactory.class)) {
+                result.setWorkflowDestinationSelectorCount(getTotalEntities());
+            }
+
             result.setWorkflowDestinationSelectors(workflowControl.getWorkflowDestinationSelectorTransfers(userVisit, entities));
         }
 
